# index-sort

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yaml
src/: lib.rs
